--- a/index.html
+++ b/index.html
@@ -30,9 +30,15 @@
             Web<span class="studio">Studio</span>
           </a>
           <ul class="ul-list">
-            <li><a href="./index.html" class="nav-item"> Studio </a></li>
-            <li><a href="#" class="nav-item"> Portfolio </a></li>
-            <li><a href="#" class="nav-item"> Contacts </a></li>
+            <li class="li-nav-item">
+              <a href="./index.html" class="nav-item"> Studio </a>
+            </li>
+            <li>
+              <a href="#" class="nav-item"> Portfolio </a>
+            </li>
+            <li>
+              <a href="#" class="nav-item"> Contacts </a>
+            </li>
           </ul>
         </nav>
 
@@ -70,6 +76,9 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="ul-list">
             <li class="li-features-section">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna-1"></use>
+              </svg>
               <h3 class="h-features">Strategy</h3>
               <p class="paragrapf">
                 Our goal is to identify the business problem to walk away with
@@ -77,6 +86,9 @@
               </p>
             </li>
             <li class="li-features-section">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-clock-1"></use>
+              </svg>
               <h3 class="h-features">Punctuality</h3>
               <p class="paragrapf">
                 Bring the key message to the brand's audience for the best price
@@ -84,6 +96,9 @@
               </p>
             </li>
             <li class="li-features-section">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram-1"></use>
+              </svg>
               <h3 class="h-features">Diligence</h3>
               <p class="paragrapf">
                 Research and confirm brands that present the strongest digital
@@ -91,6 +106,9 @@
               </p>
             </li>
             <li class="li-features-section">
+              <svg class="icon" width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut-1"></use>
+              </svg>
               <h3 class="h-features">Technologies</h3>
               <p class="paragrapf">
                 Design practice focused on digital experiences. We bring forth a
@@ -112,6 +130,68 @@
               <div class="li-team-section-text">
                 <h3 class="h-team-section">Mark Guerrero</h3>
                 <p class="paragrapf">Product Designer</p>
+                <ul class="social-links-ts">
+                  <li>
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="li-team-section">
@@ -119,6 +199,68 @@
               <div class="li-team-section-text">
                 <h3 class="h-team-section">Tom Ford</h3>
                 <p class="paragrapf">Frontend Developer</p>
+                <ul class="social-links-ts">
+                  <li>
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="li-team-section">
@@ -126,6 +268,68 @@
               <div class="li-team-section-text">
                 <h3 class="h-team-section">Camila Garcia</h3>
                 <p class="paragrapf">Marketing</p>
+                <ul class="social-links-ts">
+                  <li>
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="li-team-section">
@@ -133,6 +337,68 @@
               <div class="li-team-section-text">
                 <h3 class="h-team-section">Daniel Wilson</h3>
                 <p class="paragrapf">UI Designer</p>
+                <ul class="social-links-ts">
+                  <li>
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.linkedin.com/"
+                      target="_blank"
+                      class="link-social-ts"
+                    >
+                      <svg
+                        class="icon-social-networks-ts"
+                        width="16"
+                        height="16"
+                      >
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -146,7 +412,14 @@
           <h2 class="h-main-team-section">Our Portfolio</h2>
           <ul class="ul-list">
             <li class="portfolio-section-list-item">
-              <img src="./images/Banking.jpg" alt="banking-app" width="360" />
+              <div class="portfolio-section-list-item-img">
+                <img src="./images/Banking.jpg" alt="banking-app" width="360" />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-container-text">
                 <h3 class="h-portfolio-section">Banking App</h3>
                 <p class="paragrapf">App</p>
@@ -221,13 +494,64 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo-link">
-          Web<span class="studio-footer">Studio</span>
-        </a>
-        <p class="footer-paragraph">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-main-info">
+          <a href="./index.html" class="logo-link">
+            Web<span class="studio-footer">Studio</span>
+          </a>
+          <p class="footer-paragraph">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media-footer">
+          <p class="footer-paragraph">Social media</p>
+          <ul class="social-links-footer">
+            <li>
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="link-social-footer"
+              >
+                <svg class="icon-social-networks-ts" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com.com/"
+                target="_blank"
+                class="link-social-footer"
+              >
+                <svg class="icon-social-networks-ts" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="link-social-footer"
+              >
+                <svg class="icon-social-networks-ts" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/"
+                target="_blank"
+                class="link-social-footer"
+              >
+                <svg class="icon-social-networks-ts" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
