--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="ul-list">
             <li class="li-features-section">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-antenna-1"></use>
-              </svg>
+              <div class="features-icons">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="h-features">Strategy</h3>
               <p class="paragrapf">
                 Our goal is to identify the business problem to walk away with
@@ -86,9 +88,11 @@
               </p>
             </li>
             <li class="li-features-section">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-clock-1"></use>
-              </svg>
+              <div class="features-icons">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="h-features">Punctuality</h3>
               <p class="paragrapf">
                 Bring the key message to the brand's audience for the best price
@@ -96,9 +100,11 @@
               </p>
             </li>
             <li class="li-features-section">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram-1"></use>
-              </svg>
+              <div class="features-icons">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="h-features">Diligence</h3>
               <p class="paragrapf">
                 Research and confirm brands that present the strongest digital
@@ -106,9 +112,11 @@
               </p>
             </li>
             <li class="li-features-section">
-              <svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut-1"></use>
-              </svg>
+              <div class="features-icons">
+                <svg class="icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="h-features">Technologies</h3>
               <p class="paragrapf">
                 Design practice focused on digital experiences. We bring forth a
@@ -131,7 +139,7 @@
                 <h3 class="h-team-section">Mark Guerrero</h3>
                 <p class="paragrapf">Product Designer</p>
                 <ul class="social-links-ts">
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
@@ -146,7 +154,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.linkedin.com.com/"
                       target="_blank"
@@ -161,7 +169,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.facebook.com/"
                       target="_blank"
@@ -176,7 +184,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.linkedin.com/"
                       target="_blank"
@@ -200,7 +208,7 @@
                 <h3 class="h-team-section">Tom Ford</h3>
                 <p class="paragrapf">Frontend Developer</p>
                 <ul class="social-links-ts">
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
@@ -215,7 +223,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.linkedin.com/"
                       target="_blank"
@@ -230,7 +238,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.facebook.com/"
                       target="_blank"
@@ -245,7 +253,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.linkedin.com/"
                       target="_blank"
@@ -269,7 +277,7 @@
                 <h3 class="h-team-section">Camila Garcia</h3>
                 <p class="paragrapf">Marketing</p>
                 <ul class="social-links-ts">
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
@@ -284,7 +292,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.linkedin.com/"
                       target="_blank"
@@ -299,7 +307,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.facebook.com/"
                       target="_blank"
@@ -314,7 +322,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.linkedin.com/"
                       target="_blank"
@@ -338,7 +346,7 @@
                 <h3 class="h-team-section">Daniel Wilson</h3>
                 <p class="paragrapf">UI Designer</p>
                 <ul class="social-links-ts">
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.instagram.com/"
                       target="_blank"
@@ -353,7 +361,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.linkedin.com/"
                       target="_blank"
@@ -368,7 +376,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.facebook.com/"
                       target="_blank"
@@ -383,7 +391,7 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="social-links-ts-item">
                     <a
                       href="https://www.linkedin.com/"
                       target="_blank"
@@ -414,11 +422,12 @@
             <li class="portfolio-section-list-item">
               <div class="portfolio-section-list-item-img">
                 <img src="./images/Banking.jpg" alt="banking-app" width="360" />
-                <div class="overlay">
+
+                <p class="overlay-paragraph">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-container-text">
                 <h3 class="h-portfolio-section">Banking App</h3>
@@ -427,11 +436,18 @@
             </li>
 
             <li class="portfolio-section-list-item">
-              <img
-                src="./images/Cashless-Payment.jpg"
-                alt="cashless-payment"
-                width="360"
-              />
+              <div class="portfolio-section-list-item-img">
+                <img
+                  src="./images/Cashless-Payment.jpg"
+                  alt="cashless-payment"
+                  width="360"
+                />
+                <p class="overlay-paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container-text">
                 <h3 class="h-portfolio-section">Cashless Payment</h3>
                 <p class="paragrapf">Marketing</p>
@@ -439,11 +455,18 @@
             </li>
 
             <li class="portfolio-section-list-item">
-              <img
-                src="./images/Meditation-App.jpg"
-                alt="meditation-app"
-                width="360"
-              />
+              <div class="portfolio-section-list-item-img">
+                <img
+                  src="./images/Meditation-App.jpg"
+                  alt="meditation-app"
+                  width="360"
+                />
+                <p class="overlay-paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container-text">
                 <h3 class="h-portfolio-section">Meditation App</h3>
                 <p class="paragrapf">App</p>
@@ -451,11 +474,18 @@
             </li>
 
             <li class="portfolio-section-list-item">
-              <img
-                src="./images/Taxi-Service.jpg"
-                alt="taxi-service"
-                width="360"
-              />
+              <div class="portfolio-section-list-item-img">
+                <img
+                  src="./images/Taxi-Service.jpg"
+                  alt="taxi-service"
+                  width="360"
+                />
+                <p class="overlay-paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container-text">
                 <h3 class="h-portfolio-section">Taxi Service</h3>
                 <p class="paragrapf">Marketing</p>
@@ -463,11 +493,18 @@
             </li>
 
             <li class="portfolio-section-list-item">
-              <img
-                src="./images/Screen-Illustrations.jpg"
-                alt="screen-illustration"
-                width="360"
-              />
+              <div class="portfolio-section-list-item-img">
+                <img
+                  src="./images/Screen-Illustrations.jpg"
+                  alt="screen-illustration"
+                  width="360"
+                />
+                <p class="overlay-paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container-text">
                 <h3 class="h-portfolio-section">Screen Illustrations</h3>
                 <p class="paragrapf">Design</p>
@@ -475,11 +512,18 @@
             </li>
 
             <li class="portfolio-section-list-item">
-              <img
-                src="./images/Online-Courses.jpg"
-                alt="online-cources"
-                width="360"
-              />
+              <div class="portfolio-section-list-item-img">
+                <img
+                  src="./images/Online-Courses.jpg"
+                  alt="online-cources"
+                  width="360"
+                />
+                <p class="overlay-paragraph">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-container-text">
                 <h3 class="h-portfolio-section">Online Courses</h3>
                 <p class="paragrapf">Marketing</p>
