--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         <div class="social-media-footer">
           <p class="footer-paragraph">Social media</p>
           <ul class="social-links-footer">
-            <li>
+            <li class="social-links-footer-item">
               <a
                 href="https://www.instagram.com/"
                 target="_blank"
