--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="social-links-footer-item">
               <a
                 href="https://www.linkedin.com.com/"
                 target="_blank"
@@ -572,7 +572,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="social-links-footer-item">
               <a
                 href="https://www.facebook.com/"
                 target="_blank"
@@ -583,7 +583,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="social-links-footer-item">
               <a
                 href="https://www.linkedin.com/"
                 target="_blank"
