--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </a>
           <ul class="ul-list">
             <li class="li-nav-item">
-              <a href="./index.html" class="nav-item"> Studio </a>
+              <a href="./index.html" class="nav-item-current"> Studio </a>
             </li>
             <li>
               <a href="#" class="nav-item"> Portfolio </a>
